flaxbox com bootstrap

--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -13,6 +13,20 @@
 
         <h2>Exemplo 1: aplicando colunas no grid (auto-layout)</h2>
 
+        <br><br>
+        <!-- A classe row indica que ali é uma linha (row) terá colunas no layout -->
+        <div class="row gx-2" >
+
+            <!-- A classe "col" indica que esta é uma coluna do layout -->
+            <div class="col">
+                <p class="bg-primary-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error consequuntur adipisci assumenda corrupti magni aut, nostrum tenetur placeat rerum molestias eligendi porro cumque minus minima libero, quae asperiores reiciendis.</p>
+            </div>
+
+            <div class="col">
+                <p class="bg-success-subtle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat aperiam optio autem, assumenda dolorum sunt dolor? Debitis dolor ipsa maxime tempore a, soluta officia obcaecati quas consequatur nisi rem dignissimos.</p>
+            </div>
+        </div>
+
     </div>
 
 
