--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -11,7 +11,7 @@
         <h1 class="text-center">Recursos para design responsivo</h1>
         <hr>
 
-        <h2>Exemplo 1: aplicando colunas no grid (auto-layout)</h2>
+        <h2 class="text-center">Exemplo 1: aplicando colunas no grid (auto-layout)</h2>
 
         <br><br>
         <!-- A classe row indica que ali é uma linha (row) terá colunas no layout -->
@@ -24,6 +24,23 @@
 
             <div class="col">
                 <p class="bg-success-subtle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat aperiam optio autem, assumenda dolorum sunt dolor? Debitis dolor ipsa maxime tempore a, soluta officia obcaecati quas consequatur nisi rem dignissimos.</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <h2 class="text-center">Exemplo 2: colunas com tamanhos diferentes</h2>
+
+        <div class="row gx-3">
+            <div class="col-4">
+                <h3 class="text-center">Coluna A</h3>
+                <p class="bg-danger-subtle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat esse explicabo Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur. </p>
+            </div>
+
+            <div class="col-8">
+                <h3 class="text-center">Coluna B</h3>
+                <p class="bg-dark-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident rem eos illum ut commodi non.</p>
+                <p class="bg-dark-subtle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus, quisquam voluptates ratione quas adipisci! Perferendis doloremque totam, dolorem laudantium nobis aut, ducimus magni, dolores sequi eveniet nisi delectus aperiam.</p>
             </div>
         </div>
 
