--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -44,6 +44,21 @@
             </div>
         </div>
 
+        <h3>Exemplo 3: colunas com tamanhos de acordo com a tela</h3>
+        <p>Usando as classes de <b>breakpoints</b>:
+            sm (>=576px), md (>=768), lg (>=992px), xl (>=1200) e xxl (>=1400px)
+        </p>
+
+        <div class="row gx-2">
+            <div class="col-md-5">
+                <p class="bg-danger-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat sapiente rerum fuga earum eveniet a, culpa cum nulla itaque nobis quas saepe laboriosam nesciunt quisquam accusamus, alias excepturi repudiandae fugiat?</p>
+            </div>
+
+            <div class="col-md-7">
+                <p class="bg-warning-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam laudantium nesciunt numquam, ullam repellendus a, et alias cumque, impedit veniam aliquid unde nobis facere nostrum fugiat pariatur! Excepturi, et?</p>
+            </div>
+        </div>
+
     </div>
 
 
