--- a/04-design-responsivo.html
+++ b/04-design-responsivo.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <h3>Exemplo 3: colunas com tamanhos de acordo com a tela</h3>
+        <h3 class="text-center">Exemplo 3: colunas com tamanhos de acordo com a tela</h3>
         <p>Usando as classes de <b>breakpoints</b>:
             sm (>=576px), md (>=768), lg (>=992px), xl (>=1200) e xxl (>=1400px)
         </p>
@@ -56,6 +56,22 @@
 
             <div class="col-md-7">
                 <p class="bg-warning-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam laudantium nesciunt numquam, ullam repellendus a, et alias cumque, impedit veniam aliquid unde nobis facere nostrum fugiat pariatur! Excepturi, et?</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <h2 class="text-center">Exemplo 4: combinando diferentes breakpoints </h2>
+
+        <div class="row gx-1">
+            <div class="col col-lg-3 col-xl-4">
+                <p class="bg-dark-subtle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="col col-lg-6 col-xl-4">
+                <p class="bg-danger-subtle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="col col-lg-3 col-xl-4">
+                <p class="bg-success-subtle">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
             </div>
         </div>
 
